# mumpsc

./: .gitignore  BuildMumpsWithGlobalsInMySQL.script  BuildMumpsWithGlobalsInPostgreSQL.script  BuildMumpsWithGlobalsInSharedNative.script  BuildMumpsWithGlobalsInSingleUserNative.script  BuildMumpsWithNativeClientServer.script  ConfigureMysql.script  ConfigureNative.script  ConfigurePostgresql.script  Debug.bserv.script  DebugBclient.script  MSBuildMumpsWithMysql.script  MSVCbuild.bat  Makefile.in  README.md  TODO  VERSION  arith.cpp.in  bifs.cpp.in  bmgsubs.3l  bmgsubs.c  bstring.cpp  btree.cpp.in  builtins.cpp  cgi.mps  configure  configure.ac  dbcreds.cpp  dosmumps.mps  globalb.cpp.in  interp.cpp.in  libmpscpp.cpp.in  lock.cpp  makePipes.in  mdh.bat.in  mdhb.bat  mumps.c.in  mumps.cpp.in  mumps.mps.in  mumps.spec  (+18 more)
doc/: AUTHORS  BenFainSocketNotes.odp  COPYING  COPYING.DOCS  COPYING.LIBS  MDH.odt  PCRE-LICENSE  ReadMe.odt  mumpsc.1
doc/examples/NetFolders/: ADDRESS  BuildAll  COPYING  COPYING.DOCS  COPYING.LIBS  blank.html  folder.list  index.html  index.mps  overview.html  tab.mps
doc/examples/btree/: AUTHORS  README  btest1.cpp  btest2.cpp  btest3.cpp  btest4.cpp  btest5.cpp  btest6.cpp  btest7.cpp  btest8.cpp  checkout  checkout.bat  index.html
function-tests/: FactorialCall.mps  FcnTst01.mps  calls.mps  dlrTest.mps  ext.mps  ext1.mps  extractTests.mps  factor.mps  factor1.mps  funcTests.mps  name.mps  order.mps  piece-tests.mps  qlengthTest.mps  qsubscriptTest.mps  queryTest.mps  s0.m  s14.m  s15.m  s15a.m  s16a.m  s16b.m  s17.m  s18.m  s19.m  s6.m  s6a.m  s6b.m  s6c.m  s6d.m  s7.m  s8.m  s8a.m  s8b.m  s9.m  stress.mps  tests.script  text.mps
include/: db.x  pcre.h
include/mumpsc/: arith.h.in  bifs.h  bstring.h  btree.h.in  builtin.h  builtinTable.h  cgi.h  compiler.h  config.h.in  cppsysfunc.h  dbcreds.h  defines.h.in  externs.h  fcns.h  global.h  globalOrder.h.in  globalvars.h  interp.h  keyfix.h.in  libmpscpp.h.in  libmpsrdbms.h  memsize.h.in  numSetup.h.in  numSetupDefines.h  pm.h  rdbms-if.h  stateVector.h.in  stem.h  strmanip.h  strmax.h.in  strmove.h.in  sym.h  symbasic.h  sysfunc.h  sysparms.h.in
test/: Makefile  pmtest.c
validate/: backref.input  backref.mps  c-validate.script  checkout.input  checkout.mps  checkout1.mps  do1.mps  ext1.mps  ext2.mps  extractTests.mps  fcns.mps  fnumber.mps  for1.mps  for2.mps  for3.mps  gbl001.cpp  gbl002.cpp  gbl003.cpp  gbl004.cpp  globals1.mps  go1.mps  interp1.mps  interp2.mps  kill.mps  lclOrder.mps  mdh001.cpp  mdhGlobal.cpp  mdhT1.cpp  mdhT2.cpp  mse1.cpp  mstring.cpp  new01.mps  new02.mps  new03.mps  numTests.mps  ops.mps  qtst.mps  readonly.mps  readonlysetup.mps  remote.mps  (+10 more)
validate/MEDDB/: 00MainTest.script  CrtMpsTblView.sql  CrtMpsTblViewMpsUse.mps  InitMumpsTable.mps  LoadMultiTblDB.script  LoadSingleTblDB.script  MultiTblQuery.mps  MysqlQueryMultiTbls.sql  MysqlQuerySnglTab.sql  PsqlQueryMultiTbls.sql  extract.mps  insbill.mps  insurance.mps  labs  labs.mps  labtab  labtab.mps  loadlabs.mps  loadlabs1.mps  loadlabtab.mps  loadlabtab1.mps  loadmedadmin.mps  loadmedadmin1.mps  loadmedtab.mps  loadmedtab1.mps  loadpatientid.mps  loadpatientid1.mps  loadprobs.mps  loadprobs1.mps  loadprobtab.mps  loadprobtab1.mps  loadvitals.mps  loadvitals1.mps  medadmin  medadmin.mps  medtab  medtab.mps  officevisit.mps  patientid  patientid.mps  (+7 more)
